--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:widget": "parcel build src/index.js --no-source-maps -d docs",
+    "build:widget": "parcel build src/index.js --no-source-maps --dist-dir docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
